# kiaak-game-engine

./: .gitignore  CMakeLists.txt  README.md  saved_scenes.txt
assets/shaders/: basic.frag  basic.vert
editor/include/Editor/: EditorCore.hpp  EditorUI.hpp
editor/src/Editor/: EditorCore.cpp  EditorUI.cpp
include/: Engine.hpp
include/Core/: Animator.hpp  Camera.hpp  Collider2D.hpp  CollisionLogger.hpp  Component.hpp  GameObject.hpp  Input.hpp  Physics2D.hpp  Project.hpp  Rigidbody2D.hpp  Scene.hpp  SceneManager.hpp  SceneSerialization.hpp  ScriptComponent.hpp  Tilemap.hpp  Timer.hpp  Transform.hpp  Window.hpp
include/Graphics/: Renderer.hpp  Shader.hpp  Sprite.hpp  SpriteRenderer.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
src/: Engine.cpp  main.cpp
src/Core/: Animator.cpp  Camera.cpp  Collider2D.cpp  CollisionLogger.cpp  GameObject.cpp  Input.cpp  Physics2D.cpp  Project.cpp  Rigidbody2D.cpp  Scene.cpp  SceneManager.cpp  SceneSerialization.cpp  ScriptComponent.cpp  Tilemap.cpp  Timer.cpp  Transform.cpp  Window.cpp
src/Graphics/: Renderer.cpp  Shader.cpp  Sprite.cpp  SpriteRenderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
